tests/snapshots/xwin-splat.snap
---
source: src/main.rs
expression: help_text
---
Fixes the packages to prune unneeded files and adds symlinks to address file
casing issues and then spalts the final artifacts into directories

Usage: splat [OPTIONS]

Options:
      --include-debug-libs
          The MSVCRT includes (non-redistributable) debug versions of the
          various libs that are generally uninteresting to keep for most usage

      --include-debug-symbols
          The MSVCRT includes PDB (debug symbols) files for several of the
          libraries that are generally uninteresting to keep for most usage

      --disable-symlinks
          By default, symlinks are added to both the CRT and `WindowsSDK` to
          address casing issues in general usage.
          
          For example, if you are compiling C/C++ code that does `#include
          <windows.h>`, it will break on a case-sensitive file system, as the
          actual path in the `WindowsSDK` is `Windows.h`. This also applies even
          if the C/C++ you are compiling uses correct casing for all CRT/SDK
          includes, as the internal headers also use incorrect casing in most
          cases.

      --preserve-ms-arch-notation
          By default, we convert the MS specific `x64`, `arm`, and `arm64`
          target architectures to the more canonical `x86_64`, `aarch`, and
          `aarch64` of LLVM etc when creating directories/names.
          
          Passing this flag will preserve the MS names for those targets.

      --use-winsysroot-style
          Use the /winsysroot layout, so that clang-cl's /winsysroot flag can be
          used with the output, rather than needing both -vctoolsdir and
          -winsdkdir. You will likely also want to use
          --preserve-ms-arch-notation and --disable-symlinks for use with
          clang-cl on Windows

      --disable-vfsoverlay
          By default, a `vfsoverlay.json` file is generated in the splat
          directory that can be used with clang's `-ivfsoverlay` option. The
          overlay ignores any filesystem symlinks and resolves the case-variant
          paths to their original files. It is a no-op on case-insensitive
          filesystems, where it is skipped automatically

      --output <OUTPUT>
          The root output directory. Defaults to `./.xwin-cache/splat` if not
          specified

      --map <MAP>
          If specified, a toml file that can be used to create additional
          symlinks or skip files entirely

      --copy
          Copies files from the unpack directory to the splat directory instead
          of moving them, which preserves the original unpack directories but
          increases overall time and disk usage

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
